fixed incorrect z-index for stacking elements

--- a/styles/DropMenu.module.css
+++ b/styles/DropMenu.module.css
@@ -6,7 +6,7 @@
    filter: drop-shadow(5px 5px 4px rgba(0, 0, 0, 0.5));
    display: flex;
    flex-direction: column;
-   z-index: 1;
+   z-index: 2;
 }
 
 .openModal {
