--- a/styles/SignInBox.module.css
+++ b/styles/SignInBox.module.css
@@ -7,7 +7,7 @@
    transform: translate(-50%, -50%);
    width: 100vw;
    height: 100vh;
-   z-index: 1;
+   z-index: 2;
 }
 
 /* fade in/out animations for semi transparent background */ 
@@ -35,7 +35,7 @@
    align-items: center;
    background-color: #474747;
    position: absolute;
-   z-index: 1;
+   z-index: 3;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
